Fixes spacing issues in report

--- a/src/components/styles/Report.css
+++ b/src/components/styles/Report.css
@@ -1,7 +1,22 @@
-#report-display-container {
+#report-display-outer-wrap {
   margin: 0;
-  padding: 0;
+  padding: 5pt;
   text-indent: 0;
+  border: 5pt solid black;
+}
+
+#report-display-inner-wrap {
+  margin: 0;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 10pt;
+  padding-bottom: 10pt;
+  text-indent: 0;
+  border: 2pt solid black;
+}
+
+#report-header {
+  display: flex;
 }
 
 h1 {
@@ -35,8 +50,9 @@ h4 {
   color: #010202;
   font-family: Arial, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 550;
   text-decoration: underline;
+  text-underline-offset: 3pt;
   font-size: 11.5pt;
 }
 
@@ -44,7 +60,7 @@ h4 {
   color: #010202;
   font-family: Arial, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 550;
   text-decoration: none;
   font-size: 12pt;
 }
@@ -55,7 +71,7 @@ h4 {
   font-style: normal;
   font-weight: bold;
   text-decoration: none;
-  font-size: 13pt;
+  font-size: 12pt;
 }
 
 .s4 {
@@ -64,7 +80,7 @@ h4 {
   font-style: normal;
   font-weight: bold;
   text-decoration: none;
-  font-size: 11pt;
+  font-size: 10pt;
 }
 
 .s5 {
@@ -73,7 +89,7 @@ h4 {
   font-style: normal;
   font-weight: bold;
   text-decoration: none;
-  font-size: 9pt;
+  font-size: 10pt;
 }
 
 .s6 {
@@ -82,7 +98,7 @@ h4 {
   font-style: normal;
   font-weight: bold;
   text-decoration: none;
-  font-size: 8pt;
+  font-size: 10pt;
 }
 
 .s7 {
@@ -91,7 +107,7 @@ h4 {
   font-style: normal;
   font-weight: bold;
   text-decoration: none;
-  font-size: 7pt;
+  font-size: 10pt;
 }
 
 .s8 {
@@ -116,7 +132,7 @@ h4 {
   color: #010202;
   font-family: Arial, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 510;
   text-decoration: none;
   font-size: 11.5pt;
 }
@@ -125,7 +141,6 @@ p {
   color: #010202;
   font-family: Arial, sans-serif;
   font-style: normal;
-  font-weight: normal;
   text-decoration: none;
   font-size: 10.5pt;
   margin: 0pt;
@@ -145,6 +160,7 @@ tbody {
   vertical-align: top;
   overflow: visible;
 }
-#report-header {
-  display: flex;
+
+.conclusion {
+  font-weight: 550;
 }
